<resources>
    <string name="app_name">Meet</string>
    <string name="error_uid_empty">UID不允许为空</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="join_room">进入房间</string>
    <string name="leave_room">退出房间</string>
    <string name="confirm_cancel">取消</string>
    <string name="input_roomid">请输入房间ID</string>
    <string name="upload_log_tittle">意见反馈</string>
    <string name="commit">提交</string>
    <string name="input_content_tip">请输入反馈内容</string>
    <string name="app_version">当前版本:V%s-%s</string>
    <string name="app_version2">V%s-Meet-%s</string>

    <string name="full_screen">放大</string>
    <string name="full_screen_return">恢复</string>
    <string name="stop_video">关闭摄像头</string>
    <string name="open_video">打开摄像头</string>
    <string name="stop_audio">关闭麦克风</string>
    <string name="open_audio">打开麦克风</string>

    <string name="error_weak_net">你的网络信号较弱</string>
    <string name="app_destitle">版本功能描述：</string>
    <string name="app_des">升级SDK到2.7.0</string>

    <string name="setting">设置</string>

    <string name="loading_progress">加载中...</string>
    <string name="open_remote_video">打开视频</string>
    <string name="close_remote_video">关闭视频</string>
    <string name="open_remote_audio">打开音频</string>
    <string name="close_remote_audio">关闭音频</string>
    <string name="token_error">token获取失败，请检查当前网络</string>

    <string name="error_ileagal_number">纯数字键盘，不可输入特殊字符</string>
    <string name="error_ileagal_room_id">请填写正确的房间号</string>
    <string name="error_join_room">加入房间失败(%d)</string>
    <string name="error_ileagal_uid">请填写正确的uid</string>
    <string name="error_switch_forn_camera">切换前后摄像头失败(%s)</string>
    <string name="error_start_play">推流失败(%d)</string>
</resources>
