<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    app:navigationIcon="@mipmap/icon_back"
    tools:ignore="MissingConstraints">

    <TextView
      android:id="@+id/toolbar_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:singleLine="true"
      android:textColor="#FF333333"
      android:textSize="18sp"
      android:title="@string/upload_log_tittle" />
  </android.support.v7.widget.Toolbar>

  <LinearLayout
    android:id="@+id/ll_des"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="@dimen/dp16"
    android:layout_marginTop="@dimen/dp20"
    android:background="@drawable/bg_version"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <TextView
      android:id="@+id/tv_app_version"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dp16"
      android:textColor="@color/black65"
      android:textSize="@dimen/sp15" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:paddingBottom="6dp"
      android:text="@string/app_destitle"
      android:textColor="@color/black65"
      android:textSize="@dimen/sp15" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="10dp"
      android:text="@string/app_des"
      android:textColor="@color/jly_grey"
      android:textSize="@dimen/sp14" />
  </LinearLayout>

  <EditText
    android:id="@+id/et_feedback_content"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_below="@+id/ll_des"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/bg_feedback_content"
    android:gravity="left|top"
    android:hint="@string/input_content_tip"
    android:inputType="textMultiLine"
    android:padding="10dp"
    android:textColor="@color/black95"
    android:textSize="@dimen/sp15"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ll_des" />

  <com.mediaroom.ui.MyButton
    android:id="@+id/imageview_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/et_feedback_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/bg_upload_btn"
    android:text="@string/commit"
    android:textColor="@android:color/white"
    android:textSize="@dimen/sp15"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_feedback_content" />

</android.support.constraint.ConstraintLayout>
